samples/_failures_safe/1761723307_fd75d8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c09fb707.c: In function ‘main’:
./samples/SAFE/__tmp_c09fb707.c:154:5: error: expected declaration or statement at end of input
  154 |     printf("Compressed data: ");
      |     ^~~~~~
